# usb_tst

./: .gitignore  CMakeLists.txt  README.md  capture_to_files.c  firmware_hex.c  main.c  types.h  usb.c  usb.h
sigrok-firmware-fx2lafw/: export_fw.sh  fx2lafw.c
sigrok-firmware-fx2lafw/include/: dscr.inc
